# codex-spur

./: .gitignore  AGENTS.md  CHANGELOG.md  DESIGN.md  IMPLEMENTATION.md  LICENSE  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: windows-release.yml
docs/: kimi-app-phase0-probe.md  kimi-app-selective-block.md
scripts/: kimi_block_work_model_config.py
src/: App.tsx  api.ts  reasoning.test.ts  reasoning.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  tray-icon.rgba
src-tauri/migrations/: 0001_initial.sql  0002_accounts_and_discovery.sql  0003_usage_events.sql  0004_provider_kind.sql  0005_scheduler.sql  0006_request_diagnostics.sql  0007_provider_entry_category.sql  0008_scheduler_parity.sql
src-tauri/src/: app_update.rs  catalog.rs  codex_config.rs  content_encoding.rs  credentials.rs  domain.rs  kimi_list_shield.rs  kimi_target.rs  lib.rs  main.rs  media_sanitizer.rs  openai_agent_identity.rs  openai_oauth.rs  opencode_go.rs  presets.rs  providers.rs  proxy.rs  quota.rs  storage.rs  upstream_errors.rs  vault.rs  xai_oauth.rs
src-tauri/src/scheduler/: mod.rs  scoring.rs  select.rs  types.rs
src/usage/: ModelDonut.tsx  ProviderBars.tsx  TrendChart.tsx  UsagePage.test.tsx  UsagePage.tsx  chartPaths.test.ts  chartPaths.ts  format.test.ts  format.ts  index.ts
website/: 404.html  README.md  index.html  package.json  release-manifest.json  tsconfig.json  vite.config.ts
website/deploy/: Caddyfile.example  cloudflared.example.yml
website/en/: index.html
website/public/assets/: codex-model-picker-1068.avif  codex-model-picker-640.avif
website/scripts/: deploy.sh  validate-release.mjs
website/src/: Site.tsx  main.tsx  release.ts  styles.css  types.ts
