[package]
name = "codex-spur"
version = "0.1.0"
description = "A local-first model and account router for Codex"
authors = ["Codex Spur"]
edition = "2021"
rust-version = "1.86"
license = "MIT"

[lib]
name = "codex_select_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "codex-spur"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aes-gcm = "0.11"
anyhow = "1"
axum = "0.8"
directories = "6"
hex = "0.4"
getrandom = "0.4"
keyring = "4"
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
tauri = { version = "2", features = ["tray-icon"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
toml_edit = "0.25"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
uuid = { version = "1", features = ["v4", "v5"] }
zeroize = { version = "1", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1.0.1", features = ["protected"] }
keyring-core = "1.0"
