[package]
name = "codex-spur"
version = "0.1.3"
description = "A local-first model and account router for Codex"
authors = ["Codex Spur"]
edition = "2021"
rust-version = "1.86"
license = "MIT"
default-run = "codex-spur"

[lib]
name = "codex_select_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "codex-spur"
path = "src/main.rs"

[[bin]]
name = "codex-spur-publish"
path = "src/bin/codex_spur_publish.rs"
required-features = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aes-gcm = "0.11"
anyhow = "1"
axum = "0.8"
base64 = "0.22"
brotli = "7"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
crypto_box = { version = "0.9", features = ["std", "seal"] }
directories = "6"
ed25519-dalek = { version = "2", features = ["pkcs8", "rand_core"] }
flate2 = "1"
futures-util = "0.3"
hex = "0.4"
getrandom = "0.4"
rand = "0.8"
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }
zstd = "0.13"
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
tauri = { version = "2", features = ["tray-icon"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
toml_edit = "0.25"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
uuid = { version = "1", features = ["v4", "v5"] }
zeroize = { version = "1", features = ["derive"] }
